[gd_scene load_steps=36 format=3 uid="uid://chnn70hv3qw17"]

[ext_resource type="Script" uid="uid://bbaqo38bseslw" path="res://scenes/spoiler/npc_spoiler_2_orang.gd" id="1_ufrfl"]
[ext_resource type="Texture2D" uid="uid://xi1wbdbq1hm7" path="res://images/NPC/npc_happysheet.png" id="2_04tx8"]
[ext_resource type="Texture2D" uid="uid://c8445q2crkkqq" path="res://images/NPC/npc_lovesheet.png" id="3_80dw3"]
[ext_resource type="Texture2D" uid="uid://ci63x4htieugg" path="res://images/NPC/npc_sadsheet.png" id="4_4il1r"]
[ext_resource type="Texture2D" uid="uid://bui0062bw53hs" path="res://images/NPC/npc_sparklingsheet.png" id="5_c6smq"]
[ext_resource type="Texture2D" uid="uid://t4wi6gn60mur" path="res://images/NPC/npc_sweatdropsheet.png" id="6_ijub3"]
[ext_resource type="Texture2D" uid="uid://ducstjl2f6w88" path="res://images/kenney_btn/Tilemap/tilemap.png" id="7_mfit6"]
[ext_resource type="Texture2D" uid="uid://d4k403uva55ql" path="res://images/Bubble Chat/bubblechat_right.png" id="8_fd2mg"]
[ext_resource type="Texture2D" uid="uid://ce1bpwfum365v" path="res://images/Bubble Chat/bubblechat_left.png" id="9_bowo2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6mc3"]
size = Vector2(55.14254, 42.97034)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp2wg"]
atlas = ExtResource("2_04tx8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s7qt"]
atlas = ExtResource("2_04tx8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohv33"]
atlas = ExtResource("3_80dw3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0biuf"]
atlas = ExtResource("3_80dw3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r388p"]
atlas = ExtResource("4_4il1r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhoc2"]
atlas = ExtResource("4_4il1r")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ydm"]
atlas = ExtResource("5_c6smq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_golgw"]
atlas = ExtResource("5_c6smq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3y4x"]
atlas = ExtResource("6_ijub3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdfgg"]
atlas = ExtResource("6_ijub3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k2q1"]
atlas = ExtResource("6_ijub3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sacjq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp2wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s7qt")
}],
"loop": true,
"name": &"npc_1",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohv33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0biuf")
}],
"loop": true,
"name": &"npc_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r388p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhoc2")
}],
"loop": true,
"name": &"npc_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ydm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_golgw")
}],
"loop": true,
"name": &"npc_4",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3y4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdfgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k2q1")
}],
"loop": true,
"name": &"npc_5",
"speed": 5.0
}]

[sub_resource type="InputEventAction" id="InputEventAction_nkxbk"]
action = &"npc"

[sub_resource type="Shortcut" id="Shortcut_cfcw6"]
events = [SubResource("InputEventAction_nkxbk")]

[sub_resource type="AtlasTexture" id="AtlasTexture_nkxbk"]
atlas = ExtResource("7_mfit6")
region = Rect2(442, 187, 16, 16)

[sub_resource type="CanvasTexture" id="CanvasTexture_sacjq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5jqei"]
atlas = SubResource("CanvasTexture_sacjq")
region = Rect2(424.5, 51, 16.907, 16.547)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1xtb"]
atlas = ExtResource("8_fd2mg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_plu7g"]
atlas = ExtResource("8_fd2mg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3wwu"]
atlas = ExtResource("8_fd2mg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xx552"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1xtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plu7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3wwu")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fsyyg"]
atlas = ExtResource("9_bowo2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8d53"]
atlas = ExtResource("9_bowo2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0l4j"]
atlas = ExtResource("9_bowo2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lvugs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsyyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8d53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0l4j")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="npc_spoiler_2_orang" type="StaticBody2D"]
texture_filter = 1
scale = Vector2(2.4119308, 2.1410117)
script = ExtResource("1_ufrfl")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.0730278, -56.048267)
shape = SubResource("RectangleShape2D_q6mc3")

[node name="npc" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1.6584215, -55.581203)
scale = Vector2(0.45, 0.45)
sprite_frames = SubResource("SpriteFrames_sacjq")
animation = &"npc_1"
autoplay = "npc_1"
frame = 1
frame_progress = 0.8374994

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Button" type="TextureButton" parent="."]
texture_filter = 1
offset_left = -15.340407
offset_top = -59.78482
offset_right = -7.048297
offset_bottom = -50.910503
toggle_mode = true
action_mode = 0
button_mask = 0
shortcut = SubResource("Shortcut_cfcw6")
texture_normal = SubResource("AtlasTexture_nkxbk")
ignore_texture_size = true
stretch_mode = 4

[node name="SpoilerBar" type="TextureProgressBar" parent="."]
z_index = -1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.340407
offset_top = -60.25189
offset_right = -7.048296
offset_bottom = -51.37758
grow_horizontal = 2
grow_vertical = 2
value = 100.0
fill_mode = 4
nine_patch_stretch = true
texture_progress = SubResource("AtlasTexture_5jqei")

[node name="npc2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(28.193161, -55.58093)
scale = Vector2(0.45, 0.45)
sprite_frames = SubResource("SpriteFrames_sacjq")
animation = &"npc_4"
autoplay = "npc_4"

[node name="BubblechatRight" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(21.559488, -66.32379)
scale = Vector2(0.4767374, 0.50542885)
sprite_frames = SubResource("SpriteFrames_xx552")
autoplay = "default"
frame_progress = 0.609018

[node name="BubblechatLeft" type="AnimatedSprite2D" parent="."]
z_index = 5
position = Vector2(5.950535, -67.22801)
scale = Vector2(0.45730278, 0.49813014)
sprite_frames = SubResource("SpriteFrames_lvugs")
autoplay = "default"
frame_progress = 0.92687196

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
